--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -8,6 +8,14 @@ tags: []
 spreaker: 53819375
 apple: patoarchitekci-short-27/id1477067604?i=1000612738192
 newsletter:  |
+  Patoarchitekci Short! Dziś m. in:
+  - Co ma wspólnego hacking, Uber i legislacja Wielkiej Brytanii?
+  - Czy rzeczywiście Amazon nie radzi sobie z mikroserwisami, z serverlessem,
+  - nowe regulacje odnośnie opensource'u przepchnięte przez Senat USA.
+  ## Sprawdź czerwcowe pato-szkolenia👇
+  - [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+  - [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
+  
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -18,7 +26,7 @@ newsletter:  |
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-27/id1477067604?i=1000612738192)
 
-  ➡️ [YouTube]()
+  ➡️ [YouTube](https://www.youtube.com/watch?v=izBVKEbic10)
 ---
 Patoarchitekci Short! Dziś m. in:
 Co ma wspólnego hacking, Uber i legislacja Wielkiej Brytanii? 
