--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -6,7 +6,7 @@ description:
 episode: "75"
 tags: []
 spreaker: 5391642
-apple: 
+apple: tu-mia%C5%82-by%C4%87-przegl%C4%85d-nowo%C5%9Bci-z-google-i-o/id1477067604?i=1000613629456
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/75/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/4NTi8YdPTHRdOLTRiR4uQ2)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/tu-mia%C5%82-by%C4%87-przegl%C4%85d-nowo%C5%9Bci-z-google-i-o/id1477067604?i=1000613629456)
 
   ➡️ [YouTube]()
 ---
