--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -18,8 +18,11 @@ newsletter:  |
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/tu-mia%C5%82-by%C4%87-przegl%C4%85d-nowo%C5%9Bci-z-google-i-o/id1477067604?i=1000613629456)
 
-  ➡️ [YouTube]()
+  ➡️ [YouTube](https://www.youtube.com/watch?v=3gv5QqhO2CI)
 ---
+Google, hype na AI a rzeczywistość  
+\- czy w wielu przypadkach nie wystarczy użyć pojęcia machine learningu i deep learningu? Konferencja Google I/O - niewypał? 
+\- a także o nowym artykule LinkedIna i zastosowaniu DORA!
 
 
 Linki i ciekawe znaleziska:
