--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -8,6 +8,15 @@ tags: []
 spreaker: 5391642
 apple: tu-mia%C5%82-by%C4%87-przegl%C4%85d-nowo%C5%9Bci-z-google-i-o/id1477067604?i=1000613629456
 newsletter:  |
+  Google, hype na AI a rzeczywistość  
+  \- czy w wielu przypadkach nie wystarczy użyć pojęcia machine learningu i deep learningu? Konferencja Google I/O - niewypał? 
+  \- a także o nowym artykule LinkedIna i zastosowaniu DORA!
+  
+  ## Sprawdź czerwcowe pato-szkolenia👇
+  
+  - [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
+  - [Szkolenie Kubernetes the Hard Way - 14.06.2022](https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023)
+  
   
 
   ## Posłuchaj odcinka na ⬇️
