--- a/_posts/2023-03-17-66.md
+++ b/_posts/2023-03-17-66.md
@@ -4,9 +4,21 @@ title: '#66 Patoarchitekci Short #22'
 date: 2023-03-17 08:00:00 +0200
 description: 
 episode: "66"
-tags: []
+tags: ["discord","database","platform","design"]
 spreaker: 53222762
 apple: patoarchitekci-short-22/id1477067604?i=1000604610122
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/66/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/5FOaZTrMcl2hvL9KWjgYUi)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-22/id1477067604?i=1000604610122)
+
+  ➡️ [YouTube]()
 ---
 Mamy dla Was nowe znaleziska! 
 Discord, Cassandra, Scylla, Spotify i nie tylko!
