--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -4,9 +4,21 @@ title: '#67 Patoarchitekci Short #23'
 date: 2023-03-24 08:00:00 +0200
 description: 
 episode: "67"
-tags: []
+tags: ["docker","ms","microsoft","database"]
 spreaker: 53311093
 apple: patoarchitekci-short-23/id1477067604?i=1000605678136
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/67/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/4G5QsM3ZaDbvVCfK4XlfYl)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-23/id1477067604?i=1000605678136)
+
+  ➡️ [YouTube]()
 ---
 Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Posłuchajcie, co tym razem ciekawego znaleźli Patoarchitekci!
 
