--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -4,9 +4,21 @@ title: '#68 Patoarchitekci Short #24'
 date: 2023-03-31 08:00:00 +0200
 description: 
 episode: "68"
-tags: []
+tags: ["chatgpt","ai","openai","chmura"]
 spreaker: 53391145
 apple: patoarchitekci-short-24/id1477067604?i=1000606703295
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/68/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/4PsiiLsiyGdsTSpdSrHjuY)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-24/id1477067604?i=1000606703295)
+
+  ➡️ [YouTube]()
 ---
 Jak zacząć zarządzać architekturą? 
 ChatGPT - pluginy i generowanie scen 3D - oraz do czego wykorzystują go developerzy,
