--- a/_posts/2023-04-07-69.md
+++ b/_posts/2023-04-07-69.md
@@ -4,9 +4,21 @@ title: '#69 Wprowadzenie do Event Sourcing z Oskarem Dudyczem'
 date: 2023-04-07 08:00:00 +0200
 description: 
 episode: "69"
-tags: []
+tags: ["event","sourcing","architektura","it"]
 spreaker: 53460484
 apple: wprowadzenie-do-event-sourcing-z-oskarem-dudyczem/id1477067604?i=1000607816170
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/69/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/79aJrKtwbNeUI6nLC0BzMI)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/wprowadzenie-do-event-sourcing-z-oskarem-dudyczem/id1477067604?i=1000607816170)
+
+  ➡️ [YouTube]()
 ---
 Tym razem nasz gość specjalny, Oskar Dudycz, przybliży nam temat event sourcingu!
 
