--- a/_posts/2023-04-14-70.md
+++ b/_posts/2023-04-14-70.md
@@ -4,9 +4,21 @@ title: '#70 Fallacies of Distributed Computing'
 date: 2023-04-14 08:00:00 +0200
 description: 
 episode: "70"
-tags: []
+tags: ["it","architektura","design","cloud"]
 spreaker: 53528029
 apple: fallacies-of-distributed-computing/id1477067604?i=1000608908597
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/70/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/08FZdoBnMCO0Tn1bCAODpG)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/fallacies-of-distributed-computing/id1477067604?i=1000608908597)
+
+  ➡️ [YouTube]()
 ---
 Tym razem o aktualności fallacies of distributed computing, czyli systemy rozproszone Czy ww. tezy są wciąż aktualne? Sprawdźcie, jak weryfikują je Patoarchitekci!
 
