--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -4,9 +4,21 @@ title: '#71 Patoarchitekci Short #25'
 date: 2023-04-21 08:00:00 +0200
 description: 
 episode: "71"
-tags: []
+tags: ["it","database","engineering","network"]
 spreaker: 53594024
 apple: patoarchitekci-short-25/id1477067604?i=1000610053816
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/71/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/4xMpXEeDXS7H8x4iF2WTIc)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-25/id1477067604?i=1000610053816)
+
+  ➡️ [YouTube]()
 ---
 Tym razem o Postgresie, rynku IT, a także kilka ciekawostek!
 
