--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -4,9 +4,21 @@ title: '#72 Patoarchitekci Short #26'
 date: 2023-04-28 08:00:00 +0200
 description: 
 episode: "72"
-tags: []
+tags: ["kubernetes","hr","cloud","it"]
 spreaker: 53674062
 apple: patoarchitekci-short-26/id1477067604?i=1000610979490
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/72/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/77Cc0tAnJO04CBuWIvAXlo)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-26/id1477067604?i=1000610979490)
+
+  ➡️ [YouTube]()
 ---
 Jak skutecznie budować organizacje?  Czy wskaźniki HRowe przekładają się na rzeczywistość?  Co nowego w Kubernetesie?  Odpowiedzi na te pytania - i nie tylko - w najnowszym Shorcie!
 
