--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -4,7 +4,7 @@ title: '#73 Technology Radar vol. 28 - Review'
 date: 2023-05-05 08:00:00 +0200
 description: 
 episode: "73"
-tags: []
+tags: ["cloud","kubernetes","tech","event"]
 spreaker: 53737539
 apple: technology-radar-vol-28-review/id1477067604?i=1000611834787
 newsletter:  |
