--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -4,7 +4,7 @@ title: '#74 Patoarchitekci Short #27'
 date: 2023-05-12 08:00:00 +0200
 description: 
 episode: "74"
-tags: []
+tags: ["opensource","it","serverless","amazon"]
 spreaker: 53819375
 apple: patoarchitekci-short-27/id1477067604?i=1000612738192
 newsletter:  |
