--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -4,7 +4,7 @@ title: '#75 Tu miał być przegląd nowości z Google I/O'
 date: 2023-05-19 08:00:00 +0200
 description: 
 episode: "75"
-tags: []
+tags: ["ai","openai","chatgpt","google"]
 spreaker: 5391642
 apple: tu-mia%C5%82-by%C4%87-przegl%C4%85d-nowo%C5%9Bci-z-google-i-o/id1477067604?i=1000613629456
 newsletter:  |
