--- a/_posts/2023-05-26-76.md
+++ b/_posts/2023-05-26-76.md
@@ -6,7 +6,7 @@ description:
 episode: "76"
 tags: []
 spreaker: 53994352.3
-apple: 
+apple: patoarchitekci-short-28/id1477067604?i=1000614562177
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/76/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1Ch9F61x9YmgMtYPe9HH78)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-28/id1477067604?i=1000614562177)
 
   ➡️ [YouTube]()
 ---
