--- a/_posts/2023-05-26-76.md
+++ b/_posts/2023-05-26-76.md
@@ -4,7 +4,7 @@ title: '#76 Patoarchitekci Short #28'
 date: 2023-05-26 08:00:00 +0200
 description: 
 episode: "76"
-tags: []
+tags: ["kafka","architektura","chmura"]
 spreaker: 53994352.3
 apple: patoarchitekci-short-28/id1477067604?i=1000614562177
 newsletter:  |
