--- a/_posts/2023-06-02-77.md
+++ b/_posts/2023-06-02-77.md
@@ -4,7 +4,7 @@ title: '#77 Jak wypadł Microsoft Build 2023?'
 date: 2023-06-02 08:00:00 +0200
 description: 
 episode: "77"
-tags: []
+tags: ["microsoft","ai","openai","azure","linux","tech"]
 spreaker: 5406490
 apple: 
 newsletter:  |
@@ -20,6 +20,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+Microsoft 📙 - OS Company, Cloud Company czy może AI Company? 🔔Czy i dlaczego będziemy mogli spotkać copilota dosłownie wszędzie? 🔔 Czy nadchodzi coś większego niż modele LLM? 🤔
 
 
 Linki i ciekawe znaleziska:
