--- a/_posts/2023-06-02-77.md
+++ b/_posts/2023-06-02-77.md
@@ -6,7 +6,7 @@ description:
 episode: "77"
 tags: ["microsoft","ai","openai","azure","linux","tech"]
 spreaker: 5406490
-apple: 
+apple: jak-wypad%C5%82-microsoft-build-2023/id1477067604?i=1000615383556
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/77/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/0CnkVORq76IyFzLS5qn9GS)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/jak-wypad%C5%82-microsoft-build-2023/id1477067604?i=1000615383556)
 
   ➡️ [YouTube]()
 ---
