--- a/_posts/2023-06-09-78.md
+++ b/_posts/2023-06-09-78.md
@@ -4,7 +4,7 @@ title: '#78 Patoarchitekci Short #29'
 date: 2023-06-09 08:00:00 +0200
 description: 
 episode: "78"
-tags: []
+tags: ["ai","owasp","cloud"]
 spreaker: 54137385
 apple: 
 newsletter:  |
@@ -20,6 +20,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+Patoarchitekci Short!  Więcej o AI  i kwestiach regulacyjnych, OWASP Top Ten, open source w serwisach cloudowych... i nie tylko!
 
 
 Linki i ciekawe znaleziska:
