--- a/_posts/2023-06-09-78.md
+++ b/_posts/2023-06-09-78.md
@@ -6,7 +6,7 @@ description:
 episode: "78"
 tags: ["ai","owasp","cloud"]
 spreaker: 54137385
-apple: 
+apple: patoarchitekci-short-29/id1477067604?i=1000616237087
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/78/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/3l2aWgqHUwQTykN6g4KaSz)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-29/id1477067604?i=1000616237087)
 
   ➡️ [YouTube]()
 ---
