--- a/_posts/2023-06-16-79.md
+++ b/_posts/2023-06-16-79.md
@@ -4,7 +4,7 @@ title: '#79 Patoarchitekci Short #30'
 date: 2023-06-16 08:00:00 +0200
 description: 
 episode: "79"
-tags: []
+tags: ["patoarchitekci","ai","tech","architektura","design"]
 spreaker: 54429013
 apple: 
 newsletter:  |
@@ -20,6 +20,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+Tym razem poruszamy temat Big Techu a rozwiązań takich, jak CloudFlare, Grafana i nie tylko!
 
 
 Linki i ciekawe znaleziska:
