--- a/_posts/2023-06-16-79.md
+++ b/_posts/2023-06-16-79.md
@@ -6,7 +6,7 @@ description:
 episode: "79"
 tags: ["patoarchitekci","ai","tech","architektura","design"]
 spreaker: 54429013
-apple: 
+apple: patoarchitekci-short-30/id1477067604?i=1000617232602
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/79/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/546bB6CYoZvja8T1o6PyVt)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-30/id1477067604?i=1000617232602)
 
   ➡️ [YouTube]()
 ---
