--- a/_posts/2023-06-23-80.md
+++ b/_posts/2023-06-23-80.md
@@ -6,7 +6,7 @@ description:
 episode: "80"
 tags: ["patoarchitekci","it"]
 spreaker: 54759899
-apple: 
+apple: patoarchitekci-short-31/id1477067604?i=1000618059550
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/80/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/5RKdCle2OzVGMuVtkIUeoX)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-31/id1477067604?i=1000618059550)
 
   ➡️ [YouTube]()
 ---
