--- a/_posts/2023-06-30-81.md
+++ b/_posts/2023-06-30-81.md
@@ -6,7 +6,7 @@ description:
 episode: "81"
 tags: ["ai","patoarchitekci","it"]
 spreaker: 55474110
-apple: 
+apple: patoarchitekci-short-32/id1477067604?i=1000618839908
 newsletter:  |
   
 
@@ -14,9 +14,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/81/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/1CZnvVMhzQ12krJkVJb3yU)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-32/id1477067604?i=1000618839908)
 
   ➡️ [YouTube]()
 ---
