--- a/_posts/2023-09-08-82.md
+++ b/_posts/2023-09-08-82.md
@@ -6,12 +6,12 @@ description:
 episode: "82"
 tags: ["opensource","hashicorp","mckinsey","stackoverflow","ai","kubernetes","docker"]
 spreaker: 56723189
-apple: 
+apple: patoarchitekci-short-33/id1477067604?i=1000627167713
 newsletter:  |
   Hej,
   Zaczynamy nowy sezon Patoarchitektów. Możesz już posłuchać pierwszego odcinka. A jest czego słuchać! 
   
-  Począwszy od drobnych dram takich jak HashiCorp czy linki sponsorowane w Moq, przez drastyczny spadek wejść w StackOverflow, aż po iście ciekawy raport o mierzeniu wydajności developerów, made by Mckinsey. 
+  Począwszy od drobnych dram takich jak HashiCorp czy sponsor links w Moq, przez drastyczny spadek wejść w StackOverflow, aż po iście ciekawy raport o mierzeniu wydajności developerów, made by Mckinsey. 
   
   Startujemy! 
   
@@ -22,11 +22,11 @@ newsletter:  |
 
   ➡️ [Spotify](https://open.spotify.com/episode/)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-33/id1477067604?i=1000627167713)
 
   ➡️ [YouTube]()
 ---
-Patoarchitekci Short #33: Po wakacyjnej przerwie startujemy z nowym sezonem Patoarchitektów. Będzie się działo. Na początek kilka dram min. zmiana licencji w HashiCorp czy linki sponsorowane w Moq. Omówimy też Stack Overflow i spadek wejść o 35% (sic!), a na deser zostawiiliśmy sobie hejt na raporcie McKinsey o absurdalnych metodach mierzenia wydajności developerów. Startujemy!
+Patoarchitekci Short #33: Po wakacyjnej przerwie startujemy z nowym sezonem Patoarchitektów. Będzie się działo. Na początek kilka dram min. zmiana licencji w HashiCorp czy sponsor link w Moq. Omówimy też Stack Overflow i spadek wejść o 35% (sic!), a na deser zostawiiliśmy sobie hejt na raporcie McKinsey o absurdalnych metodach mierzenia wydajności developerów. Startujemy!
 
 
 Linki i ciekawe znaleziska:
