--- a/_posts/2023-09-08-82.md
+++ b/_posts/2023-09-08-82.md
@@ -20,7 +20,7 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/82/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/00b8tGIHsZbPt6vnYvRxzl)
 
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-33/id1477067604?i=1000627167713)
 
