--- a/_posts/2023-09-15-83.md
+++ b/_posts/2023-09-15-83.md
@@ -4,10 +4,16 @@ title: '#83 Patoarchitekci Short #34'
 date: 2023-09-15 08:00:00 +0200
 description: 
 episode: "83"
-tags: []
-spreaker: 
+tags: ["mckinsey","devops","kafka","prototypowanie biznesowe","test end-to-end","api","dokumentacja"]
+spreaker: 56796419
 apple: 
 newsletter:  |
+  Hej,
+  To ten czas w tygodniu, kiedy znów rzucamy mięsem. W dzisiejszym odcinku wrócimy na moment do raportu McKinsey i tematu mierzenia wydajności pracy developerów. Wszystko za sprawą nowego komentarza Orosza, który oczywiście omówimy i dobitnie skomentujemy. 
+  
+  Ale to nie wszystko. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego. Na koniec trochę mięsa o testach end-to-end kontra UI. Czy mogą być skuteczne? Jak je stosować, żeby przynosiły efekty i kiedy i jak szybko kasować wyniki? 
+  
+  Startujemy już dzisiaj. Wejdź na [patoarchitekci.io/83/](patoarchitekci.io/83/) i sam posłuchaj.
   
 
   ## Posłuchaj odcinka na ⬇️
