--- a/_posts/2023-09-15-83.md
+++ b/_posts/2023-09-15-83.md
@@ -6,12 +6,12 @@ description:
 episode: "83"
 tags: ["mckinsey","devops","kafka","prototypowanie biznesowe","test end-to-end","api","dokumentacja"]
 spreaker: 56796419
-apple: 
+apple: patoarchitekci-short-34/id1477067604?i=1000627962173
 newsletter:  |
   Hej,
   To ten czas w tygodniu, kiedy znów rzucamy mięsem. W dzisiejszym odcinku wrócimy na moment do raportu McKinsey i tematu mierzenia wydajności pracy developerów. Wszystko za sprawą nowego komentarza Orosza, który oczywiście omówimy i dobitnie skomentujemy. 
   
-  Ale to nie wszystko. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego. Na koniec trochę mięsa o testach end-to-end kontra UI. Czy mogą być skuteczne? Jak je stosować, żeby przynosiły efekty i kiedy i jak szybko kasować wyniki? 
+  Ale to nie wszystko. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego. Na koniec trochę mięsa o testach end-to-end. Czy mogą być skuteczne? Jak je stosować, żeby przynosiły efekty i kiedy i jak szybko kasować wyniki? 
   
   Startujemy już dzisiaj. Wejdź na [patoarchitekci.io/83/](patoarchitekci.io/83/) i sam posłuchaj.
   
@@ -20,13 +20,13 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/83/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/68E3rSTW87fVlsdOiKFw2m)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-34/id1477067604?i=1000627962173)
 
   ➡️ [YouTube]()
 ---
-Patoarchitekci Short #34: Znów rzucamy mięsem. Dzisiaj wracamy na chwilę do raportu McKinsey'a i tematu badania skuteczności developerów. Wszystko za sprawą artykułu Orosza i jego komentarza do raportu. Potem obsmarujemy (albo nie) prototypowanie biznesowe, zainspirowani newsletterem Oskara Dudycza. Na koniec trochę o testach end-to-end kontra UI. Kiedy, jak, gdzie, po co? I dlaczego część z nich warto szybko kasować? Zaczynamy?
+Patoarchitekci Short #34: Znów rzucamy mięsem. Dzisiaj wracamy na chwilę do raportu McKinsey'a i tematu badania skuteczności developerów. Wszystko za sprawą artykułu Orosza i jego komentarza do raportu. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego - raczej o wpisie Oskara, który popełnił w ramach jednego ze swoich newsletterów. Na koniec trochę o testach end-to-end. Kiedy, jak, gdzie, po co? I dlaczego część z nich warto szybko kasować? Zaczynamy?
 
 
 Linki i ciekawe znaleziska:
